--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,4 +11,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+body {
+  background-color: limegreen;
+  display: flex;
+}
+
+main {
+  display: flex;
+}
+
+.container {
+  max-width: 960px;
+  margin: auto;
+  text-align: center;
+  font-family: monospace;
 }
