Changes to project routes

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@ body {
   display: flex;
 }
 
+.img {
+  max-width: 20em;
+  max-height: 20em;
+}
+
 .container {
   max-width: 960px;
   margin: auto;
